--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "format": "prettier --write \"**/*.js\"",
     "start": "babel-node index.js",
     "start:dev": "nodemon",
+    "start:service": "node loadService --exec babel-node",
+    "start:client": "node loadClient --exec babel-node",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json"
@@ -14,7 +16,9 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.1.6",
     "@nestjs/platform-express": "^9.0.0",
+    "ioredis": "^5.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
