--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.1.6",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.6",
+    "@nestjs/websockets": "^9.1.6",
+    "@socket.io/redis-adapter": "^7.2.0",
+    "@socket.io/redis-emitter": "^5.0.0",
+    "amqp-connection-manager": "^4.1.9",
+    "amqplib": "^0.10.3",
     "ioredis": "^5.2.3",
+    "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "socket.io": "^4.5.3",
+    "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
